Aggiunge enable/disable euristica